fixed modal font color, fixed sign out alignment, added expiration date to poll in db

--- a/client/main.scss
+++ b/client/main.scss
@@ -35,3 +35,6 @@ $primary-color: color("grey", "darken-4");
 .lean-overlay {
   z-index: 0 !important;
 }
+.modal-content {
+    color: #000000;
+}
